response code 규약 및 처리
