# service/public/swagger.json
@@ -6,7 +6,139 @@
 		"parameters": {},
 		"requestBodies": {},
 		"responses": {},
-		"schemas": {},
+		"schemas": {
+			"PrefixCode_ObjectDotNotation_BaseCode__": {
+				"type": "string",
+				"enum": [
+					"server:success",
+					"server:error",
+					"server:auth.invalid_password",
+					"server:auth.no_users",
+					"server:auth.exists_email",
+					"server:database.undefined",
+					"server:database.duplicated",
+					"server:database.disconnected"
+				]
+			},
+			"BaseResponse_boolean.undefined_": {
+				"properties": {
+					"metadata": {},
+					"message": {
+						"type": "string"
+					},
+					"result": {
+						"type": "boolean"
+					},
+					"code": {
+						"$ref": "#/components/schemas/PrefixCode_ObjectDotNotation_BaseCode__"
+					}
+				},
+				"required": [
+					"result",
+					"code"
+				],
+				"type": "object"
+			},
+			"Express.User": {
+				"properties": {},
+				"type": "object",
+				"additionalProperties": false
+			},
+			"BaseResponse_boolean.Express.User_": {
+				"properties": {
+					"metadata": {
+						"$ref": "#/components/schemas/Express.User"
+					},
+					"message": {
+						"type": "string"
+					},
+					"result": {
+						"type": "boolean"
+					},
+					"code": {
+						"$ref": "#/components/schemas/PrefixCode_ObjectDotNotation_BaseCode__"
+					}
+				},
+				"required": [
+					"result",
+					"code"
+				],
+				"type": "object"
+			},
+			"LoginDTO": {
+				"properties": {
+					"email": {
+						"type": "string"
+					},
+					"pwd": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"email",
+					"pwd"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"BaseResponse_boolean.number-Array_": {
+				"properties": {
+					"metadata": {
+						"items": {
+							"type": "number",
+							"format": "double"
+						},
+						"type": "array"
+					},
+					"message": {
+						"type": "string"
+					},
+					"result": {
+						"type": "boolean"
+					},
+					"code": {
+						"$ref": "#/components/schemas/PrefixCode_ObjectDotNotation_BaseCode__"
+					}
+				},
+				"required": [
+					"result",
+					"code"
+				],
+				"type": "object"
+			},
+			"SignupDTO": {
+				"properties": {
+					"email": {
+						"type": "string",
+						"format": "email"
+					},
+					"name": {
+						"type": "string",
+						"description": "풀네임 2자이상 써야데",
+						"minLength": 2,
+						"maxLength": 50
+					},
+					"pwd": {
+						"type": "string",
+						"minLength": 8,
+						"maxLength": 50
+					},
+					"meta_json": {
+						"type": "string"
+					},
+					"auto_login": {
+						"type": "boolean"
+					}
+				},
+				"required": [
+					"email",
+					"name",
+					"pwd"
+				],
+				"type": "object",
+				"additionalProperties": false
+			}
+		},
 		"securitySchemes": {}
 	},
 	"info": {
@@ -18,6 +150,198 @@
 		"contact": {}
 	},
 	"paths": {
+		"/user/profile": {
+			"put": {
+				"operationId": "UpdateProfile",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/BaseResponse_boolean.undefined_"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "Validation Failed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"details": {
+											"properties": {},
+											"additionalProperties": {},
+											"type": "object"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"details",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Unhandled",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"name": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"name"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/user/{idx}": {
+			"delete": {
+				"operationId": "DeleteDataset",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"type": "boolean"
+								}
+							}
+						}
+					},
+					"401": {
+						"description": "Unauthorized",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"422": {
+						"description": "Validation Failed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"details": {
+											"properties": {},
+											"additionalProperties": {},
+											"type": "object"
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"details",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Unhandled",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"User"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "idx",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
 		"/auth/check": {
 			"get": {
 				"operationId": "Check",
@@ -27,7 +351,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "boolean"
+									"$ref": "#/components/schemas/BaseResponse_boolean.Express.User_"
 								}
 							}
 						}
@@ -49,7 +373,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "boolean"
+									"$ref": "#/components/schemas/BaseResponse_boolean.undefined_"
 								}
 							}
 						}
@@ -71,7 +395,15 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "boolean"
+									"$ref": "#/components/schemas/BaseResponse_boolean.undefined_"
+								},
+								"examples": {
+									"Example 1": {
+										"value": {
+											"email": "admin@saige.ai",
+											"pwd": "admin8282"
+										}
+									}
 								}
 							}
 						}
@@ -87,35 +419,23 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"email": {
-										"type": "string"
-									},
-									"pwd": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"email",
-									"pwd"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/LoginDTO"
 							}
 						}
 					}
 				}
 			}
 		},
-		"/auth": {
-			"put": {
-				"operationId": "UpdateDataset",
+		"/auth/signup": {
+			"post": {
+				"operationId": "Signup",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "boolean"
+									"$ref": "#/components/schemas/BaseResponse_boolean.number-Array_"
 								}
 							}
 						}
@@ -131,70 +451,17 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"properties": {
-									"idx": {
-										"type": "number",
-										"format": "double"
-									},
-									"name": {
-										"type": "string"
-									},
-									"type": {
-										"type": "string"
-									},
-									"meta": {
-										"type": "string"
-									}
-								},
-								"required": [
-									"idx",
-									"name",
-									"type",
-									"meta"
-								],
-								"type": "object"
+								"$ref": "#/components/schemas/SignupDTO"
 							}
 						}
 					}
 				}
-			}
-		},
-		"/auth/{idx}": {
-			"delete": {
-				"operationId": "DeleteDataset",
-				"responses": {
-					"200": {
-						"description": "Ok",
-						"content": {
-							"application/json": {
-								"schema": {
-									"type": "boolean"
-								}
-							}
-						}
-					}
-				},
-				"tags": [
-					"Auth"
-				],
-				"security": [],
-				"parameters": [
-					{
-						"in": "path",
-						"name": "idx",
-						"required": true,
-						"schema": {
-							"format": "double",
-							"type": "number"
-						}
-					}
-				]
 			}
 		}
 	},
 	"servers": [
 		{
-			"url": "/"
+			"url": "/service/v1"
 		}
 	]
 }
