# service/src/modules/datasource/Entities/UserEntity.ts
@@ -1,11 +1,17 @@
 import { BaseEntity } from '../BaseEntity';
 
+export type UserMetaJson = {
+  test: string;
+};
+
 export type UserSchema = {
   idx: number;
   type: string;
   email: string;
   pwd: string;
   name: string;
+  meta_json: string | UserMetaJson;
+  updated_time: number;
   created_time: number;
 };
 
@@ -34,6 +40,19 @@ export class UserEntity extends BaseEntity<UserSchema> {
       pwd: {
         type: 'string',
         options: [50],
+      },
+      meta_json: {
+        type: 'text',
+      },
+      updated_time: {
+        type: 'timestamp',
+        options: [
+          {
+            precision: 6,
+          },
+        ],
+        index: ['idx_created_time'],
+        default: BaseEntity.database.fn.now(),
       },
       created_time: {
         type: 'timestamp',
